--- a/commentsdep/templates/base.html
+++ b/commentsdep/templates/base.html
@@ -70,7 +70,25 @@
                         <li class="nav-item">
                             <a href="/articles/my_site/{{ user.id }}">
                                 <i class="icon icon-people"></i>
-                                My site
+                                Moja strona
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/articles/hours/{{ user.id }}">
+                                <i class="icon icon-time"></i>
+                                Godziny
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/articles/finance/{{ user.id }}">
+                                <i class="icon icon-link"></i>
+                                Finanse
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/articles/schedule/{{ user.id }}">
+                                <i class="icon icon-edit"></i>
+                                Grafik
                             </a>
                         </li>
                         <li class="nav-item">
