--- a/commentsdep/articles/templates/articles/article_list.html
+++ b/commentsdep/articles/templates/articles/article_list.html
@@ -1,18 +1,26 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div style="margin-bottom: 2em; width: 10em;">
-<a href="/articles/article_create/{{ user.id }}" style="text-decoration: none;">
-  <div class="tile tile-centered">
-    <div class="tile-icon">
-      <i class="icon icon-plus centered"></i>
+<header class="navbar" style="margin-bottom: 2em;">
+  <section class="navbar-section">
+    <a href="/articles/article_create/{{ user.id }}" style="text-decoration: none;">
+      <div class="tile tile-centered">
+        <div class="tile-icon">
+          <i class="icon icon-plus centered"></i>
+        </div>
+        <div class="tile-content">
+          <div class="tile-title pt-1">Dodaj post</div>
+        </div>
+      </div>
+    </a>
+  </section>
+  <section class="navbar-section">
+    <div class="input-group input-inline">
+      <input class="form-input" type="text" placeholder="search">
+      <button class="btn btn-primary input-group-btn">Search</button>
     </div>
-    <div class="tile-content">
-      <div class="tile-title pt-1">Dodaj post</div>
-    </div>
-  </div>
-</a>
-</div>
+  </section>
+</header>
 {% for article in object_list %}
 <a href="{{ article.get_absolute_url }}" style="text-decoration: none;">
 <div class="tile forum-tile" id="tile_">
