--- a/commentsdep/articles/templates/articles/article_create.html
+++ b/commentsdep/articles/templates/articles/article_create.html
@@ -3,9 +3,23 @@
 {% block content %}
 <h2>Dodaj post</h2>
 
-<form class="form-group" method="POST">
+<form method="POST" novalidate="">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input class="btn btn-lg" type="submit" value="save" />
+    <div class="form-group">
+        <label class="form-label" for="title">Title</label>
+        <input class="form-input" name="title" type="text" id="id_title" placeholder="Name">
+    </div>
+    <div class="form-group">
+        <label class="form-label" for="content">Comment</label>
+        <textarea class="form-input" rows="10" name="content" id="id_content" placeholder="Textarea" rows="3"></textarea>
+    </div>
+    <div class="form-group">
+        <label class="form-label" for="snippet">Snippet</label>
+        <input class="form-input" name="snippet" type="text" id="id_snippet" placeholder="Name">
+    </div>
+    <div class="form-group" style="margin-top: 1rem;">
+    <input class="btn btn-lg" type="submit" value="Dodaj" />
+    </div>
 </form>
 {% endblock %}
+
