articles title search added

--- a/commentsdep/articles/templates/articles/finance.html
+++ b/commentsdep/articles/templates/articles/finance.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Wkrótce</h1>
+<h2>Finanse</h2>
+<p>Przepracowałeś/aś godzin w tym miesiącu. </p>
+<p>Twoja wypłata za miesiąc {{ month }}: {{ payment }} PLN </p>
+<p>Twoja stawka: {{ user.profile.rate }} </p>
 {% endblock %}
