--- a/commentsdep/articles/templates/articles/article_list.html
+++ b/commentsdep/articles/templates/articles/article_list.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h2>Forum</h2>
 <header class="navbar" style="margin-bottom: 2em;">
   <section class="navbar-section">
     <a href="/articles/article_create/{{ user.id }}" style="text-decoration: none;">
@@ -15,10 +16,10 @@
     </a>
   </section>
   <section class="navbar-section">
-    <div class="input-group input-inline">
-      <input class="form-input" type="text" placeholder="search">
-      <button class="btn btn-primary input-group-btn">Search</button>
-    </div>
+    <form class="input-group input-inline" method="GET">
+      <input  class="form-input" type="text" name="title_search" id="id_title_search" placeholder="wyszukaj tytuł">
+      <button class="btn btn-primary input-group-btn" type="submit">Search</button>
+    </form>
   </section>
 </header>
 {% for article in object_list %}
