--- a/commentsdep/templates/base.html
+++ b/commentsdep/templates/base.html
@@ -95,7 +95,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/articles">
+                            <a href="{% url 'articles:home' %}">
                                 <i class="icon icon-message"></i>
                                 Forum
                             </a>
@@ -111,7 +111,7 @@
                     <div class="top">
                         <span>Siema, {{ request.user }}</span>
                         <span style="margin-left: 5px">
-                            <a href="/articles/logout"> logout </a>
+                            <a href="{% url 'logout' %}"> logout </a>
                         </span>
                     </div>
                     <div>
