modified salary as float

--- a/commentsdep/articles/templates/articles/hours.html
+++ b/commentsdep/articles/templates/articles/hours.html
@@ -24,7 +24,7 @@
                     {% if day.salary %}    
                     {{ day.salary}} PLN
                     {% else %}
-                    Ka-ching!
+                    0.01 PLN
                     {% endif %}  
                 </th>
             </tr>
