--- a/commentsdep/templates/base.html
+++ b/commentsdep/templates/base.html
@@ -77,7 +77,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="{% url 'articles:hours' user.id %}">
+                            <a href="{% url 'articles:hours' user.pk %}">
                                 <i class="icon icon-time"></i>
                                 Godziny
                             </a>
