--- a/commentsdep/articles/templates/articles/finance.html
+++ b/commentsdep/articles/templates/articles/finance.html
@@ -5,4 +5,5 @@
 <p>Przepracowałeś/aś godzin w tym miesiącu. </p>
 <p>Twoja wypłata za miesiąc {{ month }}: {{ payment }} PLN </p>
 <p>Twoja stawka: {{ user.profile.rate }} </p>
+<h4>Czarna lista</h4>
 {% endblock %}
