--- a/commentsdep/articles/templates/articles/article_detail.html
+++ b/commentsdep/articles/templates/articles/article_detail.html
@@ -2,16 +2,16 @@
 
 {% block content %}
 <br>
-<div style="margin-right: 20%;">
+<div>
     <div class="container">
     <h2>{{ article.title }}</h2>
     {{ article.content}}
     </div>
 
     {% for comment in article.comment_set.all %}
-    <br>
+
     {% if comment.status == 'accepted'%}
-    <div class="tile bg-secondary p-2">
+    <div class="tile bg-secondary p-2 m-2">
         <div class="tile-icon">
             <figure class="avatar avatar-lg">
                 <img class="icon icon-file" src="{{ comment.user.profile.image.url }}" />
