duration of working day

--- a/commentsdep/articles/templates/articles/article_list.html
+++ b/commentsdep/articles/templates/articles/article_list.html
@@ -7,7 +7,7 @@
 <header class="navbar" style="margin-bottom: 2em;">
   <section class="navbar-section">
     <a href="{% url 'articles:article-create' %}" style="text-decoration: none;">
-      <div class="tile tile-centered">
+      <div class="tile tile-centered mx-2">
         <div class="tile-icon">
           <i class="icon icon-plus centered"></i>
         </div>
