--- a/commentsdep/templates/base.html
+++ b/commentsdep/templates/base.html
@@ -71,25 +71,25 @@
                 <div class="navbar-menu mt-2">
                     <ul class="nav">
                         <li class="nav-item">
-                            <a href="{% url 'articles:my-site' user.id %}">
+                            <a href="{% url 'articles:my-site' %}">
                                 <i class="icon icon-people"></i>
                                 Moja strona
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="{% url 'articles:hours' user.pk %}">
+                            <a href="{% url 'articles:hours' %}">
                                 <i class="icon icon-time"></i>
                                 Godziny
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="{% url 'articles:finance' user.id %}">
+                            <a href="{% url 'articles:finance' %}">
                                 <i class="icon icon-link"></i>
                                 Finanse
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="{% url 'articles:schedule' user.id %}">
+                            <a href="{% url 'articles:schedule' %}">
                                 <i class="icon icon-edit"></i>
                                 Grafik
                             </a>
