--- a/commentsdep/articles/templates/articles/register.html
+++ b/commentsdep/articles/templates/articles/register.html
@@ -9,8 +9,8 @@
     <body>
         <header class="bg-secondary">
             <div style="text-align: right;">
-                <a href="/articles/login" class="btn btn-link mr-2">Login</a>
-                <a href="/articles/register" class="btn btn-link text-bold"> Register </a>
+                <a href="{% url 'login' %}" class="btn btn-link mr-2">Login</a>
+                <a href="{% url 'articles:register' %}" class="btn btn-link text-bold"> Register </a>
             </div>
             <section class="navbar-section">
             
