--- a/commentsdep/articles/templates/registration/login.html
+++ b/commentsdep/articles/templates/registration/login.html
@@ -22,7 +22,8 @@
                     <input class="form-input" type="text" name="username" placeholder="Username...">
                     <label class="form-label">Password: </label>
                     <input class="form-input" style="margin-bottom: 10px;" type="password" name="password" placeholder="Password...">
-                    <input type="submit" name="Login me">
+                    <input class="btn btn-primary" type="submit" name="Login me" value="Login">
+                    
                 </div>
             </form>
             {% for message in messages %}
