--- a/commentsdep/articles/templates/registration/register.html
+++ b/commentsdep/articles/templates/registration/register.html
@@ -30,7 +30,7 @@
                 {{ form.password2 }}
             </div>
             <div style="text-align: center;">
-                <input type="submit" name="create user">
+                <input class="btn btn-primary" type="submit" name="create user" value="Register">
             </div>
         </form>
     </body>
