--- a/commentsdep/templates/base.html
+++ b/commentsdep/templates/base.html
@@ -3,59 +3,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Some title indeed</title>
+        {% block title %}
+        <title>My Site</title>
+        {% endblock %}
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
-        <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
-        <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
-        <style>
-            .table-font {font-weight: normal;}
-            .navbar-menu { margin-left: 30px; }
-            .navbar-header {text-align: center;}
-            .navbar-body {min-height: 100vh;}
-            .main-content {margin-right: 20%; margin-top: 30px; }
-            .content-overflow {overflow: auto; height: 90vh;}
-            .body {overflow: hidden; height: 100vh;}
-            .top {text-align: right;}
-            .forum-tile { transition: background-color 0.5s;}
-            .forum-tile:hover {background-color: #f1f1fc; }
-            .avatar-size {height: 4rem; width: 4rem;}
-
-            .tab-item > label:hover {
-			cursor: pointer;
-            }
-            
-            .tab-content {
-                display: none;
-            }
-            
-            .tab-locator:nth-of-type(1):checked ~ .tab-block > .tab-item:nth-of-type(1) > label > a,
-            .tab-locator:nth-of-type(2):checked ~ .tab-block > .tab-item:nth-of-type(2) > label > a,
-            .tab-locator:nth-of-type(3):checked ~ .tab-block > .tab-item:nth-of-type(3) > label > a,
-            .tab-locator:nth-of-type(4):checked ~ .tab-block > .tab-item:nth-of-type(4) > label > a {
-                border-bottom-color: #5764c6;
-                color: #5764c6;
-            }
-            
-            .tab-locator:nth-of-type(1):checked ~ .tabs > .tab-content:nth-of-type(1),
-            .tab-locator:nth-of-type(2):checked ~ .tabs > .tab-content:nth-of-type(2),
-            .tab-locator:nth-of-type(3):checked ~ .tabs > .tab-content:nth-of-type(3),
-            .tab-locator:nth-of-type(4):checked ~ .tabs > .tab-content:nth-of-type(4) {
-                display:block;
-            }
-
-            @media (min-width: 760px){
-                .off-canvas.off-canvas-sidebar-show .off-canvas-sidebar {
-                    -ms-flex: 0 0 auto;
-                    flex: 0 0 auto;
-                    position: relative;
-                    transform: none;
-                    }
-                }
-
-
-        </style>
+        <link rel="stylesheet" href="{% static 'articles/css/spectre.css' %}">
+        <link rel="stylesheet" href="{% static 'articles/css/spectre-exp.css' %}">
+        <link rel="stylesheet" href="{% static 'articles/css/spectre-icons.css' %}">
+        <link rel="stylesheet" href="{% static 'articles/css/style.css' %}">
     </head>
+
     <body>
         <div class="off-canvas off-canvas-sidebar-show body">
             <a class="off-canvas-toggle btn btn-primary btn-action" href="#sidebar-id">
@@ -111,7 +68,7 @@
                     <div class="top">
                         <span>Siema, {{ request.user }}</span>
                         <span style="margin-left: 5px">
-                            <a href="{% url 'logout' %}"> logout </a>
+                            <a class="btn btn-sm" href="{% url 'logout' %}"> logout </a>
                         </span>
                     </div>
                     <div>
@@ -127,7 +84,10 @@
                                 </div>
                             {% endfor %}
                         {% endif %}
-                        {% block content %} {% endblock %}
+                        
+                        {% block content %}
+                        
+                        {% endblock %}
                     </div>
                 </div>
             </div>
