--- a/commentsdep/articles/templates/registration/register.html
+++ b/commentsdep/articles/templates/registration/register.html
@@ -2,9 +2,9 @@
 
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="{% static 'articles/spectre.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'articles/spectre-exp.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'articles/spectre-icons.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'articles/css/spectre.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'articles/css/spectre-exp.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'articles/css/spectre-icons.css' %}">
     </head>
     <body>
         <header class="bg-secondary">
