--- a/commentsdep/templates/base.html
+++ b/commentsdep/templates/base.html
@@ -84,7 +84,7 @@
                                 </div>
                             {% endfor %}
                         {% endif %}
-                        
+
                         {% block content %}
                         
                         {% endblock %}
@@ -92,5 +92,9 @@
                 </div>
             </div>
         </div>
+        <script src="{% static 'articles/jquery.js' %}"></script>
+        <script>
+         
+        </script>
     </body>
 </html>
