--- a/commentsdep/articles/templates/registration/login.html
+++ b/commentsdep/articles/templates/registration/login.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link rel="stylesheet" type="text/css" href="{% static 'articles/css/spectre.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'articles/css/spectre-exp.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'articles/css/spectre-icons.css' %}">
