--- a/commentsdep/articles/templates/registration/register.html
+++ b/commentsdep/articles/templates/registration/register.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static 'articles/css/spectre.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'articles/css/spectre-exp.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'articles/css/spectre-icons.css' %}">
@@ -19,18 +20,17 @@
         </header>
         <div class="columns">
             <div class="column col-4 col-lg-6 col-md-8 col-sm-10 col-mx-auto">
-                <form method="POST" action="">
+                <form method="POST" novalidate autocomplete="off">
                     {% csrf_token %}
-
                     <div class="form-group" style="text-align:center">
                         <label class="form-label">{{ form.username.label }}</label>
                         {{ form.username }}
                         <label class="form-label">{{ form.email.label }}</label>
                         {{ form.email }}
                         <label class="form-label">{{ form.password1.label }}</label>
-                        <input class="form-input" type="password" name="password1" autocomplete="new-password" required="" id="id_password1">
+                        <input class="form-control" type="password" name="password1" autocomplete="new-password" required="" id="id_password1">
                         <label class="form-label">{{ form.password2.label }} </label>
-                        <input class="form-input" type="password" name="password2" autocomplete="new-password" required="" id="id_password2">
+                        <input class="form-control" type="password" name="password2" autocomplete="new-password" required="" id="id_password2">
                     </div>
                     <div style="text-align: center;">
                         <input class="btn btn-primary" type="submit" name="create user" value="Register">
@@ -38,5 +38,6 @@
                 </form>
             </div>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     </body>
 </html>
